--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://sujal:sujal@cluster0.p5dv2nm.mongodb.net/locatesy
+MONGO_URL="mongodb+srv://sujal:sujal@cluster0.p5dv2nm.mongodb.net/locatesy"
 JWT_SECRET=sujalagawal1234
